modify historic format testing to accomodate design change